<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/resgister"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:hint="@string/first_name"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="8dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:background="@drawable/rounded_corner"
            android:hint="@string/last_name"
            android:paddingStart="15dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtFirstName"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLastName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/text"
            android:textColor="@color/text"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtUsername"
            android:inputType="textPassword"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtConfirm"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:background="@drawable/rounded_corner"
            android:hint="@string/confirmation_password"
            android:paddingStart="15dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/blue_beuty"
            android:text="@string/resgister"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtConfirm" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/have_an_account_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>
